samples/_failures_safe/1761420199_40770b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e1e1bb7.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_9e1e1bb7.c:184:13: error: expected declaration or statement at end of input
  184 |             printf("OPERATOR");
      |             ^~~~~~
./samples/SAFE/__tmp_9e1e1bb7.c:184:13: error: expected declaration or statement at end of input
